# axum-starter

./: .dockerignore  .env.local  .env.production  .env.staging  .gitignore  Cargo.toml  Dockerfile  README.md  database.db  diesel.toml  docker-compose.yml  run.sh  rustfmt.toml
.claude/agents/: rust-architect-planner.md
guide/: ARCHITECTURE.md  CONVENTIONS.md  RULES.md
memory/: MEMORY.md
migrations/2024-01-01-000001_create_users/: up.sql
migrations/2024-01-01-000002_create_refresh_tokens/: up.sql
migrations/2024-01-01-000003_create_attachments/: down.sql  up.sql
public/: index.html
src/: config.rs  lib.rs  main.rs  server.rs
src/constants/: config.rs  error.rs
src/docs/: attachment.rs  auth.rs  mod.rs  user.rs
src/extractors/: auth.rs  body.rs  formdata.rs  mod.rs  path.rs
src/models/: app_state.rs  environment.rs  mod.rs  pagination.rs
src/modules/: doc.rs  mod.rs
src/modules/attachment/: controller.rs  doc.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/auth/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/modules/health/: controller.rs  mod.rs
src/modules/user/: controller.rs  mod.rs  model.rs  repository.rs  service.rs
src/schemas/: table.rs
src/services/: http_error.rs  http_response.rs  mod.rs  postgres.rs  sqlite.rs
src/utils/: cache.rs  encrypt.rs  files.rs  generator_account.rs  http_error.rs  http_response.rs  integer.rs  mod.rs  pagination.rs  string.rs  token.rs
tests/: auth_test.rs  user_test.rs
tests/common/: mod.rs
