[package]
name = "axum-starter"
version = "0.1.0"
edition = "2024"

[dependencies]
# Asynchronous runtime for Rust
tokio = "1.49.0"
# Main web framework for building APIs
axum = "0.8"
# Tower middleware and HTTP utilities for axum
tower = "0.5.3"
tower-http = "0.6.8"
# JWT Sign and verify
jsonwebtoken = "10.3.0"
# JSON serialize and deserialize
serde = "1.0.228"
serde_json = "1.0.149"
# Utilitiy to generate uuid
uuid = "1.20.0"
# ORM Database
diesel = "2.3"
# Fetcher like fetch or axios
reqwest = { version = "0.13.1", features =["json"] }
# API Documentation
utoipa = "5.4"
utoipa-swagger-ui = "9.0.2"
